# ChemPlot

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  CITATION.bib  LICENSE  LICENSE.txt  MANIFEST.in  README.md  README.rst  Sample_Data_reference.md  chemplot_env.yml  docs_env.yml  environment.yml  meta.yaml  pyproject.toml  requirements.txt  requirements_conda.yml  setup.py
.github/workflows/: publish.yml  tests.yml  ubuntu_tests.yml
chemplot/: __init__.py  chemplot.py  descriptors.py  parameters.py  utils.py
chemplot/data/: C_1513_BACE_2.csv  C_41127_HIV_3.csv  R_1513_BACE.csv  R_4200_LOGP.csv  R_9982_AQSOLDB.csv
chemplot/tests/: cluster_test.py  conftest.py  fromsmiles_test.py  interactive_plot_test.py  pca_test.py  tsne_test.py  umap_test.py  utils_test.py  visualize_plot_test.py
chemplot/tests/test_data/: C_1484_CLINTOX_2_erroneous_smiles.csv
docs/: Makefile  api.rst  citation.rst  conf.py  docs_conda_req.yml  index.rst  make.bat  requirements.txt
docs/source/: api.rst  conf.py  index.rst
docs/source/user_manual/: add_features.rst  getting_started.rst  installation.rst  visualize_plots.rst
docs/user_manual/: add_features.rst  clustering.rst  development.rst  dimreduction.rst  getting_started.rst  installation.rst  sample_datasets.rst  similarity.rst  visualize_plots.rst
performace_tests/: performanceTest.py  visualplotsTest.py
tests/: chemplot_fromsmiles_test.py  chemplot_fromsmiles_unittest.py  chemplot_interactive_plot_test.py  chemplot_interactive_plot_unittest.py  chemplot_pca_test.py  chemplot_pca_unittest.py  chemplot_tsne_test.py  chemplot_tsne_unittest.py  chemplot_umap_test.py  chemplot_umap_unittest.py  chemplot_visualize_plot_test.py  chemplot_visualize_plot_unittest.py  conftest.py  fromsmiles_test.py  interactive_plot_test.py  pca_test.py  umap_test.py  visualize_plot_test.py
tests/performace_tests/: performanceTest.py  performance_test.py  performance_test_28_6_2021_metadata.txt  visual_plotsTest.py  visual_plots_test.py
tests/test_data/: C_2039_BBBP_2.csv  C_2039_BBBP_2_erroneous_smiles.csv  README.md  R_1291_LOGS.csv
